--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl:
 # Site settings
 title: Sarayu Labs
 email: hello@sarayulabs.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "We are a technology consultancy helping businesses grow and establish their online presence. We can help you take your ideas to life in 10 weeks."
 
 
 # Team names, titles and social links
